# Flixpass

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: app.rs  config.rs  error.rs  main.rs  state.rs  types.rs
backend/src/admin/: handlers.rs  mod.rs  service.rs
backend/src/auth/: dto.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  password.rs  service.rs
backend/src/bookings/: dto.rs  handlers.rs  mod.rs  service.rs
backend/src/db/: models.rs  pool.rs  schema.rs
backend/src/movies/: dto.rs  handlers.rs  mod.rs  service.rs
backend/src/repositories/: mod.rs  movies.rs  showtimes.rs  users.rs
frontend/src/: App.jsx
frontend/src/components/: AppHeader.jsx  AuthPanel.jsx  BookingPanel.jsx  HeroBanner.jsx  MovieList.jsx  Sidebar.jsx
frontend/src/data/: sampleMovies.js
frontend/src/lib/: api.js  money.js
