[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
axum = "0.8.9"
chrono = "0.4.45"
diesel = "2.3.10"
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
rand_core = "0.10.1"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = "1.52.3"
tower-http = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.4"
