[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros" ] }
chrono = { version = "0.4.45", features = ["serde"] }
diesel = { version = "2.3.10", features = ["postgres","r2d2","chrono"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", features = ["rust-crypto"] }
rand_core = { version = "0.10.1", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }